# tips-dpt-decoder

./: .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml  requirements.txt  setup.cfg  tips_depth_inference.py  tips_inference_depth_postprocessing.py  tips_pca.py
config/: eval.yaml  infer.yaml  train.yaml
notebooks/: DPT_inference.ipynb  TIPS_Demo VOTS.ipynb  TIP_DECODER DPT IMAGE+TEXT.ipynb  TIP_DECODER DPT.ipynb  TIP_DECODER Linear Probe.ipynb
scripts/: __init__.py  evaluate_decoder.py  infer_depth.py  train_dpt_decoder.py
tests/: test_depth_utils.py  test_dpt_decoder.py
tips/: README.md
tips/pytorch/: 031124 DL_4_CV_HW3_ImageClassification_VisionTransformer.ipynb  DL_4_CV_HW3_ImageClassification_VisionTransformer.ipynb  TIPS_Demo.ipynb  __init__.py  image_encoder.py  run_image_encoder_inference.py  run_text_encoder_inference.py  text_encoder.py
tips/scenic/: run_tips_inference.py
tips/scenic/configs/: tips_model_config.py
tips/scenic/models/: text.py  tips.py  vit.py
tips/scenic/notebooks/: TIPS_Demo.ipynb
tips/scenic/utils/: checkpoint.py  feature_viz.py
tips_decoder/: __init__.py  pipeline.py
tips_decoder/data/: __init__.py  nyuv2.py
tips_decoder/models/: __init__.py  dpt_decoder.py
tips_decoder/utils/: __init__.py  depth.py
