[metadata]
name = tips-dpt-decoder
version = 0.1.0
description = Unofficial DPT-style depth decoder for TIPS features
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE, NOTICE
author = VOTS contributors

[options]
packages = find:
python_requires = >=3.11
install_requires =
    torch
    torchvision
    torchaudio
    numpy
    pandas
    Pillow
    matplotlib
    scikit-learn
    torchmetrics

[options.packages.find]
exclude =
    tips
    notebooks
    checkpoints
    images

[options.entry_points]
console_scripts =
    tips-train = scripts.train_dpt_decoder:main
    tips-eval = scripts.evaluate_decoder:main
    tips-infer = scripts.infer_depth:main
